--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>{{ site.title }} &raquo; {{ page.title }}</title>
-    <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "assets/css/main.css" | relative_url }}">
   </head>
   <body>
     {% include navbar.html %}
@@ -22,8 +22,8 @@
         </div>
     </footer>
 
-    <script src="{{ "/assets/js/slim.min.js" | relative_url }}"></script>
-    <script src="{{ "/assets/js/util.js" | relative_url }}"></script>
-    <script src="{{ "/assets/js/collapse.js" | relative_url }}"></script>
+    <script src="{{ "assets/js/slim.min.js" | relative_url }}"></script>
+    <script src="{{ "assets/js/util.js" | relative_url }}"></script>
+    <script src="{{ "assets/js/collapse.js" | relative_url }}"></script>
   </body>
 </html>
