--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light bg-white fixed-top">
+<nav class="navbar navbar-expand-md navbar-light bg-light shadow fixed-top">
     <div class="container">
         <a class="navbar-brand font-weight-bolder" href="{{ site.url }}">CLARE.A</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
