--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
     </div>
 </div>
 
-<main role="main" class="container">
+<main role="main" class="container bg-light">
     <div class="featurette" id="services">
         <h2 class="mt-5 badge badge-pill badge-primary text-left">Services</h2>
         <div class="card-group">
