--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,7 +40,7 @@ layout: default
         </div>
     </div>
     <div class="featurette text-center" id="process">
-        <h2 class="my-5">The Four P's.</h2>
+        <h2 class="my-5">The 3 P's.</h2>
         <div class="card-columns">
             {% for process in site.data.process %}
                 <div class="card border-0 shadow-lg">
