--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,8 +40,8 @@ layout: default
         </div>
     </div>
     <div class="featurette text-center" id="process">
-        <h2 class="my-5">The 3 P's.</h2>
-        <div class="card-columns">
+        <h2 class="my-5">The 4 P's.</h2>
+        <div class="card-deck">
             {% for process in site.data.process %}
                 <div class="card border-0 shadow-lg">
                     <div class="card-body">
